--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
+    <header class="header">
+      <h1>أهبد بايدك محدش هيفيدك</h1>
+      <div class="theme"><i class="bx bx-moon change-theme"></i></div>
+    </header>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
