Finish Start Screen

--- a/index.html
+++ b/index.html
@@ -15,6 +15,56 @@
       <h1>أهبد بايدك محدش هيفيدك</h1>
       <div class="theme"><i class="bx bx-moon change-theme"></i></div>
     </header>
+    <main class="main">
+      <section class="start-section">
+        <h3>عايز تلعبها أزاي؟</h3>
+        <div class="topic">
+          <div>
+            <label for="topic">ألموضوع:</label>
+            <span>بلاد</span>
+          </div>
+          <p><i class="bx bx-notepad"></i>حاليا متاح <span>بلاد</span> فقط.</p>
+        </div>
+        <div class="diff">
+          <label for="diff">الصعوبة:</label>
+          <form id="diff">
+            <div>
+              <input type="radio" id="easy" name="diff" value="easy" />
+              <label for="easy">سهل</label>
+            </div>
+            <div>
+              <input
+                type="radio"
+                id="normal"
+                name="diff"
+                value="normal"
+                checked
+              />
+              <label for="normal">متوسط</label>
+            </div>
+            <div>
+              <input type="radio" id="hard" name="diff" value="hard" />
+              <label for="hard">صعب</label>
+            </div>
+            <button class="start-btn">أبدأ</button>
+          </form>
+        </div>
+      </section>
+      <section class="start-section info">
+        <h3>ألصعوبة بتفرق في اي؟</h3>
+        <p>
+          <i class="bx bx-info-square"></i> <span>سهل</span>: بيكون ليك 5 هبدات.
+        </p>
+        <p>
+          <i class="bx bx-info-square"></i> <span>متوسط</span>: بيكون ليك 3
+          هبدات.
+        </p>
+        <p>
+          <i class="bx bx-info-square"></i> <span>صعب</span>: بيكون ليك هبده
+          واحدة بس.
+        </p>
+      </section>
+    </main>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
