Finish Get Random Func

--- a/index.html
+++ b/index.html
@@ -64,7 +64,63 @@
           واحدة بس.
         </p>
       </section>
+      <section class="game-section">
+        <div class="image">
+          <img src="assets/imgs/countries/1-img.jpg" alt="image" class="i-1" />
+          <img src="assets/imgs/countries/2-img.jpg" alt="image" class="i-2" />
+          <img src="assets/imgs/countries/3-img.jpg" alt="image" class="i-3" />
+          <img src="assets/imgs/countries/4-img.jpg" alt="image" class="i-4" />
+          <img src="assets/imgs/countries/5-img.jpg" alt="image" class="i-5" />
+          <img src="assets/imgs/countries/6-img.jpg" alt="image" class="i-6" />
+          <img src="assets/imgs/countries/7-img.jpg" alt="image" class="i-7" />
+          <img src="assets/imgs/countries/8-img.jpg" alt="image" class="i-8" />
+          <img src="assets/imgs/countries/9-img.jpg" alt="image" class="i-9" />
+          <img
+            src="assets/imgs/countries/10-img.jpg"
+            alt="image"
+            class="i-10"
+          />
+          <img
+            src="assets/imgs/countries/11-img.jpg"
+            alt="image"
+            class="i-11"
+          />
+          <img
+            src="assets/imgs/countries/12-img.jpg"
+            alt="image"
+            class="i-12"
+          />
+          <img
+            src="assets/imgs/countries/13-img.jpg"
+            alt="image"
+            class="i-13"
+          />
+          <img
+            src="assets/imgs/countries/14-img.jpg"
+            alt="image"
+            class="i-14"
+          />
+          <img
+            src="assets/imgs/countries/15-img.jpg"
+            alt="image"
+            class="i-15"
+          />
+          <img
+            src="assets/imgs/countries/16-img.jpg"
+            alt="image"
+            class="i-16"
+          />
+          <img
+            src="assets/imgs/countries/17-img.jpg"
+            alt="image"
+            class="i-17"
+          />
+        </div>
+      </section>
     </main>
+    <footer>
+      <p>جميع الحقوق محفوظة لدي المبرمج <span>مصطفي أحمد</span></p>
+    </footer>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
