Finish Dynamic Style

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </p>
       </section>
       <section class="game-section">
+        <h3>تفتكر دي موجودة في دولة اي؟</h3>
         <div class="image">
           <img src="assets/imgs/countries/1-img.jpg" alt="image" class="i-1" />
           <img src="assets/imgs/countries/2-img.jpg" alt="image" class="i-2" />
@@ -116,6 +117,7 @@
             class="i-17"
           />
         </div>
+        <div class="inputs"></div>
       </section>
     </main>
     <footer>
