Finish Button Again Function

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <input type="radio" id="hard" name="diff" value="hard" />
               <label for="hard">صعب</label>
             </div>
-            <button class="start-btn">أبدأ</button>
+            <button class="start-btn btn">أبدأ</button>
           </form>
         </div>
       </section>
@@ -118,6 +118,14 @@
           />
         </div>
         <div class="inputs"></div>
+        <p class="msg"></p>
+        <div class="game-btns">
+          <div>
+            <button class="check-word btn">متأكد</button>
+            <button class="hint btn">نبذه <span></span></button>
+          </div>
+          <button class="again btn">تاني</button>
+        </div>
       </section>
     </main>
     <footer>
