--- a/index.html
+++ b/index.html
@@ -120,11 +120,14 @@
         <div class="inputs"></div>
         <p class="msg"></p>
         <div class="game-btns">
-          <div>
+          <div class="manage-btns">
             <button class="check-word btn">متأكد</button>
             <button class="hint btn">نبذه <span></span></button>
           </div>
-          <button class="again btn">تاني</button>
+          <div class="btns-back">
+            <button class="again btn">تاني</button>
+            <button class="back btn">رجوع</button>
+          </div>
         </div>
       </section>
     </main>
