Finish Responsive Style

--- a/index.html
+++ b/index.html
@@ -16,107 +16,151 @@
       <div class="theme"><i class="bx bx-moon change-theme"></i></div>
     </header>
     <main class="main">
-      <section class="start-section">
-        <h3>عايز تلعبها أزاي؟</h3>
-        <div class="topic">
-          <div>
-            <label for="topic">ألموضوع:</label>
-            <span>بلاد</span>
+      <section class="start">
+        <section class="start-section">
+          <h3>عايز تلعبها أزاي؟</h3>
+          <div class="topic">
+            <div>
+              <label for="topic">ألموضوع:</label>
+              <span>بلاد</span>
+            </div>
+            <p>
+              <i class="bx bx-notepad"></i>حاليا متاح <span>بلاد</span> فقط.
+            </p>
           </div>
-          <p><i class="bx bx-notepad"></i>حاليا متاح <span>بلاد</span> فقط.</p>
-        </div>
-        <div class="diff">
-          <label for="diff">الصعوبة:</label>
-          <form id="diff">
-            <div>
-              <input type="radio" id="easy" name="diff" value="easy" />
-              <label for="easy">سهل</label>
-            </div>
-            <div>
-              <input
-                type="radio"
-                id="normal"
-                name="diff"
-                value="normal"
-                checked
-              />
-              <label for="normal">متوسط</label>
-            </div>
-            <div>
-              <input type="radio" id="hard" name="diff" value="hard" />
-              <label for="hard">صعب</label>
-            </div>
-            <button class="start-btn btn">أبدأ</button>
-          </form>
-        </div>
-      </section>
-      <section class="start-section info">
-        <h3>ألصعوبة بتفرق في اي؟</h3>
-        <p>
-          <i class="bx bx-info-square"></i> <span>سهل</span>: بيكون ليك 5 هبدات.
-        </p>
-        <p>
-          <i class="bx bx-info-square"></i> <span>متوسط</span>: بيكون ليك 3
-          هبدات.
-        </p>
-        <p>
-          <i class="bx bx-info-square"></i> <span>صعب</span>: بيكون ليك هبده
-          واحدة بس.
-        </p>
+          <div class="diff">
+            <label for="diff">الصعوبة:</label>
+            <form id="diff">
+              <div>
+                <input type="radio" id="easy" name="diff" value="easy" />
+                <label for="easy">سهل</label>
+              </div>
+              <div>
+                <input
+                  type="radio"
+                  id="normal"
+                  name="diff"
+                  value="normal"
+                  checked
+                />
+                <label for="normal">متوسط</label>
+              </div>
+              <div>
+                <input type="radio" id="hard" name="diff" value="hard" />
+                <label for="hard">صعب</label>
+              </div>
+              <button class="start-btn btn">أبدأ</button>
+            </form>
+          </div>
+        </section>
+        <section class="start-section info">
+          <h3>ألصعوبة بتفرق في اي؟</h3>
+          <p>
+            <i class="bx bx-info-square"></i> <span>سهل</span>: بيكون ليك 5
+            هبدات.
+          </p>
+          <p>
+            <i class="bx bx-info-square"></i> <span>متوسط</span>: بيكون ليك 3
+            هبدات.
+          </p>
+          <p>
+            <i class="bx bx-info-square"></i> <span>صعب</span>: بيكون ليك هبده
+            واحدة بس.
+          </p>
+        </section>
       </section>
       <section class="game-section">
-        <h3>تفتكر دي موجودة في دولة اي؟</h3>
-        <div class="image">
-          <img src="assets/imgs/countries/1-img.jpg" alt="image" class="i-1" />
-          <img src="assets/imgs/countries/2-img.jpg" alt="image" class="i-2" />
-          <img src="assets/imgs/countries/3-img.jpg" alt="image" class="i-3" />
-          <img src="assets/imgs/countries/4-img.jpg" alt="image" class="i-4" />
-          <img src="assets/imgs/countries/5-img.jpg" alt="image" class="i-5" />
-          <img src="assets/imgs/countries/6-img.jpg" alt="image" class="i-6" />
-          <img src="assets/imgs/countries/7-img.jpg" alt="image" class="i-7" />
-          <img src="assets/imgs/countries/8-img.jpg" alt="image" class="i-8" />
-          <img src="assets/imgs/countries/9-img.jpg" alt="image" class="i-9" />
-          <img
-            src="assets/imgs/countries/10-img.jpg"
-            alt="image"
-            class="i-10"
-          />
-          <img
-            src="assets/imgs/countries/11-img.jpg"
-            alt="image"
-            class="i-11"
-          />
-          <img
-            src="assets/imgs/countries/12-img.jpg"
-            alt="image"
-            class="i-12"
-          />
-          <img
-            src="assets/imgs/countries/13-img.jpg"
-            alt="image"
-            class="i-13"
-          />
-          <img
-            src="assets/imgs/countries/14-img.jpg"
-            alt="image"
-            class="i-14"
-          />
-          <img
-            src="assets/imgs/countries/15-img.jpg"
-            alt="image"
-            class="i-15"
-          />
-          <img
-            src="assets/imgs/countries/16-img.jpg"
-            alt="image"
-            class="i-16"
-          />
-          <img
-            src="assets/imgs/countries/17-img.jpg"
-            alt="image"
-            class="i-17"
-          />
+        <div class="h3-image">
+          <h3>تفتكر دي موجودة في دولة اي؟</h3>
+          <div class="image">
+            <img
+              src="assets/imgs/countries/1-img.jpg"
+              alt="image"
+              class="i-1"
+            />
+            <img
+              src="assets/imgs/countries/2-img.jpg"
+              alt="image"
+              class="i-2"
+            />
+            <img
+              src="assets/imgs/countries/3-img.jpg"
+              alt="image"
+              class="i-3"
+            />
+            <img
+              src="assets/imgs/countries/4-img.jpg"
+              alt="image"
+              class="i-4"
+            />
+            <img
+              src="assets/imgs/countries/5-img.jpg"
+              alt="image"
+              class="i-5"
+            />
+            <img
+              src="assets/imgs/countries/6-img.jpg"
+              alt="image"
+              class="i-6"
+            />
+            <img
+              src="assets/imgs/countries/7-img.jpg"
+              alt="image"
+              class="i-7"
+            />
+            <img
+              src="assets/imgs/countries/8-img.jpg"
+              alt="image"
+              class="i-8"
+            />
+            <img
+              src="assets/imgs/countries/9-img.jpg"
+              alt="image"
+              class="i-9"
+            />
+            <img
+              src="assets/imgs/countries/10-img.jpg"
+              alt="image"
+              class="i-10"
+            />
+            <img
+              src="assets/imgs/countries/11-img.jpg"
+              alt="image"
+              class="i-11"
+            />
+            <img
+              src="assets/imgs/countries/12-img.jpg"
+              alt="image"
+              class="i-12"
+            />
+            <img
+              src="assets/imgs/countries/13-img.jpg"
+              alt="image"
+              class="i-13"
+            />
+            <img
+              src="assets/imgs/countries/14-img.jpg"
+              alt="image"
+              class="i-14"
+            />
+            <img
+              src="assets/imgs/countries/15-img.jpg"
+              alt="image"
+              class="i-15"
+            />
+            <img
+              src="assets/imgs/countries/16-img.jpg"
+              alt="image"
+              class="i-16"
+            />
+            <img
+              src="assets/imgs/countries/17-img.jpg"
+              alt="image"
+              class="i-17"
+            />
+          </div>
         </div>
+
         <div class="inputs"></div>
         <p class="msg"></p>
         <div class="game-btns">
